Tue Mar  3 05:27:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/net/os_if.h:
          Fixed errors caused by previous commit.

Mon Mar  2 19:58:57 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/os_include/net/os_if.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed legacy ACE_HAS_STL_MAP_CONFLICT macro.

Mon Mar  2 14:51:20 UTC 2009  Olli Savia  <ops@iki.fi>

        * examples/Misc/test_XtReactor1.cpp:
        * examples/Misc/test_XtReactor2.cpp:
        * tests/XtAthenaReactor_Test.cpp:
        * tests/XtMotifReactor_Test.cpp:
          Fixed compile warning and run-time error on 64-bit systems.

Mon Mar  2 11:44:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Auto_IncDec_T.h:
        * ace/OS_Memory.h:
        * ace/OS_NS_Thread.h:
          Doxygen fixes

Mon Mar  2 10:35:41 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * apps/gperf/src/Key_List.cpp:

          Fixed memory leaks in gperf code.

Mon Mar  2 07:53:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Added some more links

Mon Mar  2 07:37:59 UTC 2009  Olli Savia  <ops@iki.fi>

        * performance-tests/RPC/client.cpp:
          Fixed compile error on LynxOS 4.2

Sun Mar  1 20:35:34 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-sunos5.5.h:
          Removed ACE_HAS_STL_MAP_CONFLICT.

Sun Mar  1 20:20:16 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/netinet/os_in.h:
        * ace/os_include/os_netdb.h:
        * ace/os_include/os_stropts.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed legacy ACE_HAS_STL_QUEUE_CONFLICT macro.

Sun Mar  1 18:45:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_footprint_chart.sh
        * bin/generate_performance_chart.sh
        * bin/generate_topinfo_charts.sh
        * bin/performance_stats.sh
          Rotate xlabel to make them more readable
